@@ -1,3 +1,7 @@
+2014-12-04  Carl Hetherington  <cth@carlh.net>
+
+	* Give a nicer error when writing config fails.
+
 2014-12-03  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.76.19 released.
